# show-management-platform

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-push-branch.yaml  ci.yaml  cicd-pr-main.yaml
services/people_service/: README.md  pyproject.toml  samconfig.toml  template.yaml
services/people_service/hello_world/: app.py
services/people_service/tests/unit/: test_handler.py
services/show_service/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  samconfig.toml  template.yaml
services/show_service/hello_world/: app.py
services/show_service/tests/e2e/: e2e_tests.sh
services/show_service/tests/unit/: test_handler.py
