[tool.poetry]
name = "show-management-platform"
version = "0.1.0"
description = "Show Management Platform"
authors = ["atorcode <atorcode@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
