[tool.poetry]
name = "people-service"
version = "0.1.0"
description = ""
authors = ["atorcode <atorcode@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
boto3 = "^1.38.13"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "24.1.1"
ruff = "0.11.8"
mypy = "1.15.0"
types-requests = "^2.32.0.20250328"
cfn-lint = "1.34.2"
pre-commit = "^4.2.0"
bandit = "^1.8.3"
pip-audit = "^2.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
